Add to showMessage function and HTML elements

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>Self Care Center</header>
-    <div class="messageSelect">
+    <div class="message-select">
       <form id="form">
           <p id="choose-message"<strong>Which type of message?</strong></p>
           <input type="affirmation" id="affirmation" value="affirmation" name="affirmation" class="affirmation"><label for="affirmation">affirmation</label><br>
@@ -14,7 +14,7 @@
           <div><button type="submit">Receive Message</button></div>
       </form>
     </div>
-    <div class="messageView">
+    <div class="message-view">
       <img id="meditator" src="/Users/dan/turing_work/mod1/self-care/self-care-center/assets/meditate.svg" alt="seated meditator">
       <div class="hidden suggested-message">
         <p class="suggested-message"></p>
